--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -21,27 +21,38 @@
   
   .home h1 {
     font-size: 24px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
   
   .home h2 {
-    font-size: 48px;
+    font-size: 28px;
     font-weight: bold;
-    margin: 20px 0;
+    margin: 15px 0;
+    font-family: Lucida Handwriting, Brush Script MT, Cursive;
   }
   
   .intro-text {
     margin-top: 20px;
   }
   
-  .home p {
-    max-width: 800px;
+  /* .home p {
+    max-width: 1000px;
     margin: 0 auto;
     font-size: 16px;
     line-height: 1.5;
     background: rgba(255, 255, 255, 0.1);
     padding: 20px;
     border-radius: 10px;
+  } */
+  .paraText{
+    max-width: 1000px;
+    margin: 0 auto;
+    font-size: 16px;
+    line-height: 1.5;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 20px;
+    border-radius: 10px;
+    height: 250px;
   }
   
   /* Fade in/out animation */
@@ -97,3 +108,24 @@
       min-height: 120px;
     }
   }
+
+  .parent{
+    display: flex;
+    align-items: center;
+  }
+  .profilePic {
+    height: 100px;
+    width: 100px;
+    margin-left: 400px;
+    margin-right: 100px;
+    overflow: hidden;
+    border-radius: 50%; /* This makes the container round */
+  }
+  
+  .profilePic img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%; /* This makes the image round */
+  }
+  
