--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -10,6 +10,7 @@
   .contact h2 {
     font-size: 36px;
     margin-bottom: 20px;
+    font-family: Lucida Handwriting, Brush Script MT, Cursive;
   }
   
   .contact p {
@@ -24,10 +25,21 @@
     gap: 10px;
     max-width: 300px;
     margin: 20px auto;
+    
+  }
+  .contact-card {
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 800px;
+    height: 400px;
+    margin: 30px auto;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(10px); /* Optional glassmorphism effect */
   }
   
-  .contact-options button {
-    background: rgba(255, 255, 255, 0.2);
+  .contact-options a {
+    background-color: #6b21a8;
     color: white;
     border: none;
     padding: 10px;
@@ -36,6 +48,7 @@
     font-size: 16px;
     width: 100%;
     box-sizing: border-box;
+   
   }
   
   /* Mobile adjustments */
