--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -11,6 +11,7 @@
   .projects h2 {
     font-size: 32px;
     margin-bottom: 20px;
+    font-family: Lucida Handwriting, Brush Script MT, Cursive;
   }
   
   .show-more {
