--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -61,6 +61,26 @@
     overflow-y: auto;
     /* Ensure box-sizing includes padding */
     box-sizing: border-box;
+    /* for animation */
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out forwards;
+    animation-play-state: paused;
+  }
+
+  /* for text animation */
+  .paraText.visible {
+    animation-play-state: running;
+  }
+    /* for text animation */
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
 
   @media (max-width: 600px) {
