--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -39,7 +39,7 @@
   }
   
   .contact-options a {
-    background-color: #6b21a8;
+    background-color: #2A5C5A;
     color: white;
     border: none;
     padding: 10px;
