--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -7,5 +7,6 @@
     font-family: Lucida Handwriting, Brush Script MT, Cursive;
     font-size: 32px;
     margin-bottom: 30px;
+    color: #F5E8C7;
 
 }
