--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -90,7 +90,8 @@
       top: 60px;
       left: 0;
       width: 100%;
-      background-color: #6b48ff; /* Match the background color */
+      /* background-color: #2A5C5A;  */
+      background-color: #06402B;
       padding: 20px;
       text-align: center;
     }
