--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: #6b48ff;
+  /* background: #6b48ff; */
+  background: #06402B;
 }
 
 .App {
